ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: premteams
  namespace: Ncloud-explorer-d
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false" 
spec:
  ingressClassName: nginx
  rules:
  - host: premteams.maersk-digital.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: premteams-service
            port: 
              number: 80
  tls:
    - hosts:
      - premteams.maersk-digital.net
      secretName: tls-wildcard-maersk-digital-net
